--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "big.js": "^6.2.1",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,7 +30,9 @@
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/big.js": "^6.1.5",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
