--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "~12.2.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -20,8 +21,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "big.js": "^6.2.1",
+    "cryptocurrency-icons": "^0.18.0",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
+    "primeicons": "^5.0.0",
+    "primeng": "~12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
