--- a/web/package.json
+++ b/web/package.json
@@ -24,8 +24,10 @@
     "cryptocurrency-icons": "^0.18.0",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
+    "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
-    "primeng": "~12.2.0",
+    "primeng": "^12.2.3",
+    "primeng-lts": "^12.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
