--- a/web3/package.json
+++ b/web3/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/big.js": "^6.1.5",
+    "@types/lodash": "^4.14.182",
+    "big.js": "^6.2.1",
+    "lodash": "^4.17.21",
     "ng-zorro-antd": "^13.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
