--- a/web3/package.json
+++ b/web3/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngxs/store": "^3.7.4",
     "@types/big.js": "^6.1.5",
     "@types/lodash": "^4.14.182",
     "big.js": "^6.2.1",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngxs/devtools-plugin": "^3.7.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
