--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "deploy": "ng deploy --no-silent",
     "test": "ng test"
   },
   "private": true,
@@ -35,6 +36,7 @@
     "@ngxs/devtools-plugin": "^3.7.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
